[package]
name = "hdk"
version = "0.0.0"
authors = ["Nicolas Luck <nicolas.luck@holo.host>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitflags = "1.0"
lazy_static = "1.1.0"
holochain_wasm_utils = { path = "C:/github/holochain-rust/wasm_utils"}

[dev-dependencies]
#wabt = "0.4"
test_utils = { path = "C:/github/holochain-rust//test_utils"}
holochain_core_api = { path = "C:/github/holochain-rust/core_api" }
holochain_core = { path = "C:/github/holochain-rust/core" }
holochain_dna = { path = "C:/github/holochain-rust/dna" }

#holochain_agent = { path = "C:/github/holochain-rust/agent" }