[package]
name = "hdk"
version = "0.0.0"
authors = ["Nicolas Luck <nicolas.luck@holo.host>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitflags = "1.0"
lazy_static = "1.1.0"
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust"}

[dev-dependencies]
test_utils = { git = "https://github.com/holochain/holochain-rust"}
holochain_core_api = { git = "https://github.com/holochain/holochain-rust" }
holochain_core = { git = "https://github.com/holochain/holochain-rust" }
holochain_dna = { git = "https://github.com/holochain/holochain-rust" }
