[package]
name = "hdk"
version = "0.0.0"
authors = ["Nicolas Luck <nicolas.luck@holo.host>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitflags = "1.0"
lazy_static = "1.1.0"
#holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
holochain_wasm_utils = { path = "C:/github/hcrs-develop/wasm_utils"  }

[dev-dependencies]
test_utils = { path = "C:/github/hcrs-develop/test_utils"  }
holochain_core_api =  { path = "C:/github/hcrs-develop/core_api"  }
holochain_core =  { path = "C:/github/hcrs-develop/core"  }
holochain_dna =  { path = "C:/github/hcrs-develop/dna"  }
